# webcomponent

./: Cargo.toml  LICENSE  Makefile  README.md  cargo.toml
examples/generic-greeter/: Cargo.toml  Makefile
examples/generic-greeter/demo/: hello-world.wasm  index.html
examples/generic-greeter/demo/js/: app.js
examples/generic-greeter/src/: main.rs
examples/generic-greeter/static/: index.html
examples/hello-world/: Makefile  cargo.toml
examples/hello-world/demo/: hello-world.wasm  index.html
examples/hello-world/demo/js/: app.js
examples/hello-world/src/: main.rs
examples/hello-world/static/: index.html
examples/helloworld/: example.wasm  index.html
examples/helloworld/src/: lib.rs
examples/observable_attributes/: example.wasm
examples/observable_attributes/src/: lib.rs
examples/observed_attributes/: example.wasm
examples/observed_attributes/src/: lib.rs
examples/shadowdom/: example.wasm
examples/shadowdom/src/: lib.rs
examples/todo/: Cargo.toml  example.wasm  index.html
examples/todo/src/: lib.rs
src/: lib.rs
