[package]
name = "webcomponent"
version = "0.1.0"
edition = "2018"
authors = ["Richard Anaya"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/richardanaya/webcomponent"
repository = "https://github.com/richardanaya/webcomponent"
description = "A library for creating web components"
README = "README.md"

[dependencies]
js_ffi = "0.6"
