[package]
name = "webcomponent"
version = "0.6.0"
edition = "2018"
authors = ["Richard Anaya"]
categories = ["wasm", "no-std", "web"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/richardanaya/webcomponent"
repository = "https://github.com/richardanaya/webcomponent"
description = "A library for creating web components"

[dependencies]
js_ffi = "0.6"
spin = "0.5.2"
globals = "1.0.1"